Added VC component

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
   </head>
   <style>
     body {
-      overflow-x: hidden
+      overflow-x: hidden;
+      color: white;
+      background-color: black;
     }
   </style>
   <body>
