--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,8 @@
     <title>React App</title>
   </head>
   <style>
-    body {
-      overflow-x: hidden;
-      color: white;
-      background-color: black;
+    body, html {
+      overflow-x: hidden!important;
     }
   </style>
   <body>
